# be-my-voices

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  run_backend_uvicorn.sh
backend/app/: dependencies.py  main.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 404ee54c868f_add_voice_and_session_tables.py
backend/app/models/: session.py  voice.py
backend/app/routers/: eeg.py  realtime.py  sessions.py  voices.py
backend/app/schemas/: eeg.py  sessions.py  voices.py
backend/app/services/: eeg_service.py  elevenlabs_service.py  gemini_service.py  realtime_service.py  speech_service.py  voice_service.py  whisper_service.py
backend/scripts/: check_api_keys.py
backend/tests/: conftest.py  test_elevenlabs_service.py  test_gemini_service.py  test_realtime_service.py  test_sessions.py  test_voices.py  test_whisper_service.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: index.css
frontend/src/components/: AudioRecorder.tsx  ConnectedDevices.tsx  MuseDashboard.tsx  RecoveryDisplay.tsx  VoiceSelector.tsx
frontend/src/hooks/: useAudioDevices.ts  useAudioRecorder.ts  useMuseTelemetry.ts  useProcessAudio.ts  useVoiceSampleRecorder.ts  useVoices.ts
frontend/src/lib/: api.ts
frontend/src/pages/: HomePage.tsx
frontend/src/services/: eegApi.ts  sessionApi.ts  voiceApi.ts
frontend/src/types/: eeg.ts  session.ts  voice.ts
