[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "be-my-voices-backend"
version = "0.1.0"
description = "Speech recovery API for Be My Voices"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlmodel>=0.0.22",
    "alembic>=1.14",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.18",
    "httpx>=0.28",
    "pydantic-settings>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]
eeg = [
    "muselsl>=2.3",
    "pylsl>=1.17",
    "mne>=1.8",
    "neurokit2>=0.2.10",
    "mne-features>=0.3",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint.per-file-ignores]
"app/db/migrations/env.py" = ["E402"]
"app/db/migrations/versions/*.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
exclude = ["app/db/migrations/versions/"]

[[tool.mypy.overrides]]
module = "app.core.config"
disable_error_code = ["call-arg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
